Fix spacing

--- a/style.css
+++ b/style.css
@@ -161,7 +161,9 @@ section {
 }
 
 .content .text p {
-  margin: 0;
+  /*margin: 0;*/
+  margin-left: 0;
+  margin-right: 0;
 }
 
 .content + .content {
